Change History
==============

1.8.7 (unreleased)
------------------

- Nothing changed yet.


1.8.6 (2019-07-29)
------------------

- Improve captcha error message.
  [rodfersou, idgserpro]

- Add uninstall profile and setuphandler. Make Plone 5.1 happy.
  [smcmahon]

- Allow comma for decimal separation in ExRangeValidator, because
  it is allowed by the underlying archetypes fields. Make users in some
  european countries happy.
  [nilo]


1.8.5 (2017-12-20)
------------------

- Use datepicker widget for datetime input
  [tomgross, keul]


1.8.4 (2017-07-08)
------------------

- Fix UnicodeDecodeError: RateScaleField with non-ascii values and without
  Thank-you-page.
  Fixes `issue #98 <https://github.com/smcmahon/Products.PloneFormGen/issues/98>`_.
  [vkarppinen]

- Remove collective.cover adapter reference.
  (Closes `#194 <https://github.com/smcmahon/Products.PloneFormGen/issues/194>`_.
  [rodfersou]

- Fixed UnicodeDecodeError when vocabulary value is a non-ascii string.
  This could happen in selection and multi selection fields.
  [maurits]

- Change captcha verification message for `#186 <https://github.com/smcmahon/Products.PloneFormGen/issues/186>`_.
  [tkimnguyen]

- Fix issue where quickedit view caused rendering issues because
  of a tag not being closed.
  [datakurre]

- Fix issue where logic in FormSaveDataAdapter's getColumnTitles was
  different than the logic for getColumnNames.
  [mikerenfro]

- Fix redundant template fallback value.
  [zemm]


1.8.3 (2016-12-06)
------------------

- Transform value to unicode before translating. Fix #182
  [pbauer]


1.8.2 (2016-11-22)
------------------

- Fixed showing translations of help text.  Since security release
  1.8.1, help text was showing up with only the message id, for
  example ``help_placeholder``.
  Fixes `issue #178 <https://github.com/smcmahon/Products.PloneFormGen/issues/178>`_.
  [maurits]

- Use formActionOverride action in embedded view.  [fRiSi]
