@@ -4,7 +4,8 @@ Change History
 1.8.7 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix broken RichText fields on Plone 5.1.x.
+  [alecpm]
 
 
 1.8.6 (2019-07-29)
